[gd_scene load_steps=11 format=3 uid="uid://kcng1elfhaan"]

[ext_resource type="PackedScene" uid="uid://biwdgtnk2s0kf" path="res://Scenes/UI/heart_gui.tscn" id="1_343av"]
[ext_resource type="Script" path="res://Scripts/player_boy_hud.gd" id="1_vnrwc"]
[ext_resource type="FontFile" uid="uid://bn4ek4vwudouc" path="res://Assets/Pixelfy.ttf" id="3_adpla"]
[ext_resource type="FontFile" uid="uid://cw7i6h4on5bdd" path="res://Assets/retganon.ttf" id="4_cc641"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afhuh"]
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.136826, 0.136826, 0.136826, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gq5u5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.169245, 0.169245, 0.169245, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Animation" id="Animation_77ssl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(491.5, 299.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(499, 251)]
}

[sub_resource type="Animation" id="Animation_ed4iv"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(523.5, 299.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(533.5, 251)]
}

[sub_resource type="Animation" id="Animation_shvtb"]
resource_name = "show_game_over"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(523.5, 337.5), Vector2(523.5, 299.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(533.5, 201), Vector2(533.5, 251)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jh82v"]
_data = {
"RESET": SubResource("Animation_77ssl"),
"fade_to_black": SubResource("Animation_ed4iv"),
"show_game_over": SubResource("Animation_shvtb")
}

[node name="PlayerBoyHUD" type="CanvasLayer"]
script = ExtResource("1_vnrwc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 824.0
offset_top = 16.0
offset_right = 1172.0
offset_bottom = 257.0
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("1_343av")]
layout_mode = 2

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Label" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -85.0
offset_right = 87.5
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_adpla")
theme_override_font_sizes/font_size = 29
text = "FIM DE JOGO"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -36.5
offset_right = 92.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="ContinueButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.8, 0.631373, 0, 1)
theme_override_fonts/font = ExtResource("4_cc641")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxFlat_afhuh")
theme_override_styles/normal = SubResource("StyleBoxFlat_gq5u5")
text = "CONTINUAR"

[node name="TitleButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.8, 0.631373, 0, 1)
theme_override_fonts/font = ExtResource("4_cc641")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxFlat_afhuh")
theme_override_styles/normal = SubResource("StyleBoxFlat_gq5u5")
text = "MENU PRINCIPAL"

[node name="FadeToBlack" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
"": SubResource("AnimationLibrary_jh82v")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
